Fix calls to skm_pyutils

--- a/examples/ophys.ipynb
+++ b/examples/ophys.ipynb
@@ -20,7 +20,7 @@
     "import dtale\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from skm_pyutils.py_print import print_h5"
+    "from skm_pyutils.print import print_h5"
    ]
   },
   {
